--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,21 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+### FMOD Ignores ###
+
+!/[Aa]ssets/Plugins/FMOD/**/*.dll
+
+!/[Aa}ssets/Gizmos/FMOD/*
+!/[Aa}ssets/Editor Default Resources/FMOD/*
+
+/[Aa]ssets/**/FMODStudioCache.asset
+/[Aa]ssets/**/FMODStudioCache.asset.meta
+/[Aa]ssets/Plugins/FMOD/Cache.meta
+/[Aa]ssets/Plugins/FMOD/Cache/Editor.meta
+
+fmod.log
+fmod_editor.log
+
+/Assets/FMODAssets/*
+/Assets/FMODStudioCache.meta
