trying to ignore part 1

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ fmod_editor.log
 
 /Assets/FMODAssets/*
 /Assets/FMODStudioCache.meta
+fmod_editor.log
+Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
