--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ fmod_editor.log
 /Assets/FMODStudioCache.meta
 fmod_editor.log
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+fmod_editor.log
