--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ fmod_editor.log
 fmod_editor.log
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 fmod_editor.log
+ProjectSettings/TimelineSettings.asset
