Ragdoll Camera woo!

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ fmod_editor.log
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 fmod_editor.log
 ProjectSettings/TimelineSettings.asset
+Assets/ArtAssets/Checkpoints/CursorIsHere.png.meta
