--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 fmod_editor.log
 ProjectSettings/TimelineSettings.asset
 Assets/ArtAssets/Checkpoints/CursorIsHere.png.meta
+Assets/ArtAssets/Checkpoints/SkiTripIcon.png.meta
